kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloapp
  name: helloapp
  namespace: testns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp
  strategy: {}
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - image: reg.mykube.com:5001/repo/helloapppython:1.0
        name: helloapppython
        ports:
        - containerPort: 8000
        resources: {}
