kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloapp
  name: helloapp
  namespace: testns
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32380
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloapp
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
