kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: helloapp
  namespace: testns
spec:
  rules:
  - host: helloapp.mykube.com
    http:
      paths:
      - backend:
          service:
            name: helloapp
            port:
              number: 8080
        path: /
        pathType: Prefix
